CH revisions to Ch1 of guidelines paper, still in progress

--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -4,8 +4,7 @@
 
 
 Amendments to the Canadian Fisheries Act (2019) include new Fish Stocks provisions that introduce legal
-obligations to manage stocks to promote sustainability and avoid limit reference points, LRPs {@dfoScienceAdvicePrecautionary202}. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions facing the stock. These obligations apply to major fish stocks that are prescribed under regulations. 
-These revisions reinforce the previously established DFO policies to manage stocks in line with the precautionary approach, including [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm)[@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html, DFO's implementation of the precautionary approach for Pacific salmon [@dfoCanadaPolicyConservation2005].
+obligations to manage stocks to promote sustainability and avoid limit reference points, LRPs {@dfoScienceAdvicePrecautionary202}. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions facing the stock. These obligations apply to major fish stocks that are prescribed under regulations. These revisions reinforce the previously established DFO policies to manage stocks in line with the precautionary approach, including [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm)[@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html, DFO's implementation of the precautionary approach for Pacific salmon [@dfoCanadaPolicyConservation2005].
 
 
 Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities (DFO 2009). It is also generally described in terms of impaired productivity, where declines are irreversible or only slowly reversible, e.g., due to allee effects [@kronlundSelectionRoleLimit2018]. Sustainable fisheries management is based on the assumptions of that rate of population increase is reduced as density dependence weakens at low abundances. However, increased predation rates or inability to find mates at low abundances may actual reduce the the rate of population increase [@chenIncorporatingAlleeEffects2002a]. Failing to protect stocks above the LRP means that impacts of human disturbances such as fishing may be long term and only slowly reversible if at all.
@@ -17,7 +16,11 @@ LRPs are biologically based values that are separate from management measures, b
 
 <!--CH: moving intro to WSP, CUs and benchamrks up to here-->
 
-For Pacific salmon, the WSP establishes that management should occur at the Conservation Unit (CU) level. CUs are defined as sufficiently isolated groups that, if lost, are very unlikely to be recolonized naturally within an acceptable time frame [dfoCanadaPolicyConservation2005]. The WSP is aligned with the precautionary approach in establishing three biological status zones for each CU, which are delimited by lower and higher benchmarks. The recommended lower benchmark is $Sgen$, i.e., the spawner abundances that will result in recovery to $S_{MSY}$ in one generation under equilibrium conditions, although alternative quantities can be used in the absence of the required data to estimate $Sgen$ [@holtEvaluationBenchmarksConservation2009]. The establishment of lower benchmarks are part of the WSP status assessments. To date, these assessments have been conducted for many Pacific Salmon CUs, including Fraser River sockeye salmon [@bradfordStatusCultusLake2010; @grantEvaluationUncertaintyFraser2011], coho salmon [@deckerAssessmentInteriorFraser2014; @dfoWildSalmonPolicy2015; @nobleHabitatbasedEscapementBenchmarks2015] , chum salmon [@godboutStockStatusWild2004], and chinook salmon [@dfoIntegratedBiologicalStatus2016].
+For Pacific salmon, Canada's Wild Salmon Policy, WSP, informs the development of LRPs and is DFO's implementation of the Precautionary Approach Framework for Pacific salmon. The goal of the WSP is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity [@dfoCanadaPolicyConservation2005]. One objective of the WSP is to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting, Conservation Units, defined as a "group of wild salmon sufficiently isolated from other groups that, if extirpated is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations" (DFO 2005). Biological benchmarks delineating three zones of status, green, amber, and red have been identified to represent zones of increasing conservation concern requiring increasing management intervention. The lower benchmark, delineating the red and amber zones, is identified at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada (DFO 2005; Holt et al. 2009). <!--CH: I drafted text to address Sue's point. Should we include or does introduce complexities that are not highly relevant to our goals?   "Due to the differences in metrics of status used by WSP and COSEWIC, buffers have been challenging to identify and in practice red status from WSP assessments tends to align with threatened or endangered designations by COSEWIC (Grant, S. pers. comm.)."-->One recommended lower benchmark is spawner abundances resulting in recovery to $S_{MSY}$ in one salmon generation under equilibrium conditions, $S_{gen}$ [@holtEvaluationBenchmarksConservation2009]. 
+
+Status assessments under the WSP generally integrate data across numerous dimensions of status, including spawner abundances, short and long-term trends, distribution of spawning, and fishing mortality relative to productivity [@holtEvaluationBenchmarksConservation2009].  The multidimensional framework for defining biological units and their assessment under the WSP has been adopted widely in Canada (e.g., Fraser River sockeye salmon [CSAS SAR on two WSP assessments], IFR coho [CSAS SAR on WSP assessments from 2014], Southern BC chinook salmon [@dfoIntegratedBiologicalStatus2016], Skeena report [Anything in prep from Charmaine?], PSE [citation to PSF's Tech Report describing PSE]). 
+
+
 
 
 ## Review of Reference Points for Pacific Salmon
@@ -30,16 +33,14 @@ CH: I think we should keep benchmarks as biological values as defined in the WSP
 
 <!--CH I moved the reference to other policies up, and am trying to differentiate LRPs from OCPs, though LRPs can inform OCPs (and are used in them sometimes) I'd like to distinguish them at least theoretically, so added some text explicitly on this above and made some revisions here--> 
 
-LRPs are commonly used in the assessment and management for marine fisheries when they are used to inform harvest control rules. Reviews of the application of harvest control rules and reference points can be found in @kvamsdalHarvestControlRules2016 and @puntHarvestControlRules2010. @dowlingEmpiricalHarvestStrategies2015 reviewed the use of harvest control rules and management procedures in data-poor fisheries. In Canada, @sheltonLimitsOverfishingReference2002 provided an overview of the implementation of the precautionary approach and limit reference points before the publication of the PA policy in 2006. They highlight that, at that point in time, there was limited evidence of the implementation of the precautionary approach in Canadian fisheries. In contrast, 15 years after the publication of the PA policy, a review by @marentetteSpecificationPrecautionaryApproach2021 showed that the principles of the PA policy, including the adoption of LRPs, are now widespread in the management of Canadian stocks. This review was based on a survey of 177 Canadian stocks of cultural, economic and/or environmental importance, excluding salmonids and transboundary stocks. They identified that 102 stocks had adopted LRPs, although the method used to estimate the LRPs varied considerably among stocks. @kronlundConsiderationsDesignRebuilding2021 also reviewed the use and definition of LRPs in the context of Canadian and international Policy. They highlight the importance of embedding LRPs into management objectives with associated tolerance (probability) statements, e.g., "stock status should be maintained above the LRP 90% of the time", as the tolerance statement is required to render the LRP operational. Diagnosing where serious harm is occurring is a pervasive challenge when identifying LRPs, as is addressing the impacts of non-stationarity in underlying biological processes such as natural mortality [@kronlundConsiderationsDesignRebuilding2021].
+LRPs are commonly used in the assessment and management for marine fisheries where they are used to identify and communicate statuses and inform harvest control rules. Reviews of the application of reference points and harvest control rules can be found in @kvamsdalHarvestControlRules2016 and @puntHarvestControlRules2010. @dowlingEmpiricalHarvestStrategies2015 reviewed the use of harvest control rules and management procedures in data-poor fisheries. In Canada, @sheltonLimitsOverfishingReference2002 provided an overview of the implementation of the precautionary approach and LRPs before the publication of the PA policy in 2006. They highlight that, at that point in time, there was limited evidence of the implementation of the precautionary approach in Canadian fisheries. In contrast, 15 years after the publication of the PA policy, a review by @marentetteSpecificationPrecautionaryApproach2021 showed that the principles of the PA policy, including the adoption of LRPs, are now widespread in the management of Canadian stocks. This review was based on a survey of 177 Canadian stocks of cultural, economic and/or environmental importance, excluding salmonids and transboundary stocks. They identified that 102 stocks had adopted LRPs, although the method used to estimate the LRPs varied considerably among stocks. @kronlundConsiderationsDesignRebuilding2021 also reviewed the use and definition of LRPs in the context of Canadian and international Policy. They highlight the importance of embedding LRPs into management objectives with associated tolerance (probability) statements, e.g., "stock status should be maintained above the LRP 90% of the time", as the tolerance statement is required to render the LRP operational. Diagnosing where serious harm is occurring is a pervasive challenge when identifying LRPs, as is addressing the impacts of non-stationarity in underlying biological processes such as natural mortality [@kronlundConsiderationsDesignRebuilding2021].
 
 
 
+For Pacific salmon, @portleyLimitReferencePoints2014 reviewed the use of LRPs and biological benchmarks for Pacific salmon stocks in the U.S. (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of LRPs and lower benchmarks in allowing for cross-jurisdictional comparisons of sustainability. In Canada, @chaputConsiderationsDefiningReference2012 reviewed the use of reference points, including lower benchmarks and LRPs, in the assessment and management of salmonids and other semelparous species. <!--CH: check this reference/sentence-->The review was focused on the applications of lower benchmarks at the Conservation Unit (CU) level, providing a comprehensive overview of the different methods available to assess CU status and their historical applications. @chaputConsiderationsDefiningReference2012 also provide considerations on managing multiple stocks as unit, e.g. multiple CUs as an SMU, highlighting that mixed stock management requires more precautionary benchmarks to ensure that all sub units remain above their lower benchmarks.
 
 
-In terms of Salmonids, @portleyLimitReferencePoints2014 reviewed the use of LRPs and biologically defined conservation thresholds or lower benchmarks for Pacific salmon stocks in the U.S. (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of LRPs and lower benchmarks in allowing for cross-jurisdictional comparisons of sustainability. In Canada, @chaputConsiderationsDefiningReference2012 reviewed the use of reference points, including lower benchmarks and LRPs, in the management of salmonids and other semelparous species. The review was focused on the applications of lower benchmarks at the Conservation Unit (CU) level, providing a comprehensive overview of the different methods available to assess CU status and their historical applications. @chaputConsiderationsDefiningReference2012 also provide considerations on managing multiple stocks as unit, e.g. multiple CUs as an SMU, highlighting that mixed stock management requires more precautionary benchmarks to ensure that all sub units remain above their lower benchmarks.
-
-
-
+<!--CH combine this pgh below with mention of multidimensional app for WSP assessetns above-->
  LRPs can be based on multiple stock metrics, including abundance trends, abundance, fishing mortality, and habitat distribution [@chaputConsiderationsDefiningReference2012]. In some instances, multi-dimensional approaches are also used. These approaches are particularly relevant when traditional benchmarks are not estimable or not applicable or when data availability is limited [@dowlingEmpiricalHarvestStrategies2015]. Multi-dimensional approaches allow for consideration of multiple data sources and the explicit inclusion of expert knowledge in defining LRPs. In Canada,  multi-dimensional managements benchmarks have been applied to snow crab [@mullowneyBasisPrecautionaryApproach2018]. The snow crab reference points incorporate information from CPUE estimates, egg clutches and discards to extends the scope of precaution and efficacy of the management framework. In the companion case study paper (Holt et al. in review), the multi-dimensional assessment approach introduced by (cite Pestal tech report) is used to approximate the integrated WSP status assessments for Pacific salmon CUs.  
 
 
