--- a/guidelinesWP/02-chap2.Rmd
+++ b/guidelinesWP/02-chap2.Rmd
@@ -4,19 +4,14 @@ The development of LRPs for Pacific salmon was guided by four principles. Follow
 
 <!-- CH comment: some of the text in this subsection may be moved to the Intro-->
 
-First, as described in Section \@ref(intro), LRPs  "represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities.” (DFO PA). This definition highlights that LRPs should be above the level where serious harm occurs, not at the level where it is occurring, and that long-term losses should be avoided. Also, this definition mentions possible impacts on other ecosystem components. Defining the level before serious harm occurs to a species or ecosystem is a pervasive challenge as harm is often not identified until it is already occurring (Hilborn and Walters 1992). 
+First, as described in Section \@ref(intro), LRPs  "represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities.” (DFO PA)<!--CH; add refrence-->. This definition highlights that LRPs should be above the level where serious harm occurs, not at the level where it is occurring, and that long-term losses should be avoided. Also, this definition mentions possible impacts on other ecosystem components. Defining the level before serious harm occurs to a species or ecosystem is a pervasive challenge as harm is often not identified until it is already occurring (Hilborn and Walters 1992). <!--CH; add refrence-->
 
-Second, LRPs for Pacific salmon were developed to align with the goal of Canada's Wild Salmon Policy, to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity (DFO 2005). The WSP is Pacific salmon's implementation of DFO's Precautionary Approach Framework. One objective of the WSP is to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting, Conservation Units, defined as a "group of wild salmon sufficiently isolated from other groups that, if extirpated is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations" (DFO 2005). Biological benchmarks delineating three zones of green, amber, and red have been identified to represent zones of increasing conservation concern requiring management intervention. The lower benchmark delineating the red and amber zones is identified at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada (DFO 2005; Holt et al. 2009). 
-
-One lower benchmark that is commonly used is the spawner abundances that results in recovery to SMSY within one generation under equilibrium conditions, $S_{gen}$ (Holt et al. 2009). Status assessments under the Wild Salmon Policy generally integrate data across numerous dimensions of status, including spawner abundances, short and long-term trends, distribution of spawning, and fishing mortality relative to productivity (Holt et al. 2009). The framework for defining biological units and their assessment under the WSP has been adopted widely in Canada (e.g., FR sock, IFR coho, SBC CK, Skeena report, PSE). Maintaining CUs above the red zone (i.e., spawner abundances > Sgen, and/or above lower benchmarks on various dimensions of status) is consistent with avoiding serious harm to the CU. At this level, irreversible or slowly reversible impacts are avoided. Therefore, to be consistent with the Wild Salmon Policy, LRPs need to allow for component CUs to be above their lower benchmarks.
+Second, LRPs should be consistent with the goals and objectives of the WSP. The WSP framework for defining biological units and assessing their status along biological metrics with lower benchmarks to avoid risks of extinction is consistent with avoiding serious harm to the CU. Above the lower benchmarks (above red status), irreversible or slowly reversible impacts are avoided. Therefore, to be consistent with the WSP, LRPs need to allow for component CUs to be above their lower benchmarks.
 
 Third, LRPs should be reliably estimated in a peer-reviewed framework and be consistent with scientific best practices. <!--CH add more here?-->
 
 Fourth, estimate of LRPs should be estimated in a statistically integrated <!-- 
   CW: or sequential Bayes? i.e. sampling from posterior--> way when possible in order to propagate uncertainties throughout analyses and to be consistent with current best-practices in fisheries assessments [@puntEssentialFeaturesNextgeneration2020]. @statonSequentialIntegratedBayesian2017 and @defilippoImprovingShorttermRecruitment2021 provide recent examples of integrated models used for salmon assessments. Both studies show that uncertainty propagation increase realism of model estimates and surrounding uncertainty. However, @statonSequentialIntegratedBayesian2017 demonstrated that similar results can be achieved by using sequential Bayesian estmation models. 
-
-<!--CH comment: add details and reference here -->
-<!-- CW: added refereneces-->
 
 
 
@@ -25,7 +20,7 @@ Our intention is to provide a variety of LRPs applicable for a range of data qua
 Although for other marine fish species, LRPs are typically estimated as a minimum level of spawning biomass that should not be breached, or a fishing mortality rate that should not be exceeded (Kronlund et al. 2018), LRPs along alternative metrics that incorporate trends in abundances and distribution of spawning are considered here to be consistent with assessments under the WSP. Our goals is to provide overall guidelines on LRP development while providing flexibility in application of these methods due to differences in local biological characteristics, data qualities and data quantities, among other factors.
 
 
-Furthermore, DFO's PA Framework identifies additional metrics such as catch rate indices, size and age profiles, and sex ratios that "can and should be considered for use in defining serious harm and guiding decision-making in relation to stock condition.”
+Furthermore, DFO's PA Framework identifies additional metrics such as catch rate indices, size and age profiles, and sex ratios that "can and should be considered for use in defining serious harm and guiding decision-making in relation to stock condition.” <!--CH; add refrence-->
 
 Alternative LRPs aligned with the key principles above may be developed in the future to capture a broader range of data availability, quality, and types, and dimensions of biological status.<!-- CH comment: some suggestions to be included in "further analyses" sections in both WPs".-->
 
